<resources>
  <string name="app_name">VideoRecording</string>
  <string name="action_settings">Settings</string>
  <string name="max_time">Max Time in seconds</string>
  <string name="max_size">Max Size in MB</string>
  <string name="highQuality">Video High Quality</string>
  <string name="lowQuality">Video Low Quality</string>
  <string name="out_put">Output</string>
  <string name="path">Path: %s</string>
  <string name="size">Size: %s KB</string>
  <string name="length">Length: %s ms</string>
  <string name="resolution">Resolution %s</string>
  <string name="no_video_app">No Video app was found</string>
  <string name="compressOff">Compress Off</string>
  <string name="compressOn">Compress On</string>
  <string name="no_write_permission">Cant compress without storage permission</string>
  <string name="compressing">Compressing file</string>
  <string name="permission_storage_need">WIthout storage permission this app cannot compress the video</string>
  <string name="allow">Allow</string>
  <string name="compress">Compress</string>
</resources>
