<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">
  <android.support.design.widget.CoordinatorLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.bnsantos.video.recording.MainActivity">
    <android.support.design.widget.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="@style/AppTheme.AppBarOverlay">
      <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"/>
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingBottom="@dimen/activity_vertical_margin"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingTop="@dimen/activity_vertical_margin"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      tools:context="com.bnsantos.video.recording.MainActivity"
      android:orientation="vertical"
      tools:showIn="@layout/activity_main">
      <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">
          <android.support.design.widget.TextInputLayout
            android:id="@+id/input_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:hint="@string/max_time">
            <EditText
              android:id="@+id/maxLength"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="numberDecimal"/>
          </android.support.design.widget.TextInputLayout>
          <android.support.design.widget.TextInputLayout
            android:id="@+id/input_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:hint="@string/max_size">
            <EditText
              android:id="@+id/maxSize"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="numberDecimal"/>
          </android.support.design.widget.TextInputLayout>
          <ToggleButton
            android:id="@+id/quality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_gravity="center_horizontal"
            android:textOff="@string/lowQuality"
            android:textOn="@string/highQuality"/>
          <ToggleButton
            android:id="@+id/compress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_gravity="center_horizontal"
            android:textOff="@string/compressOff"
            android:textOn="@string/compressOn"/>
          <LinearLayout
            android:id="@+id/resultLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/margin_top"
              android:layout_gravity="center_horizontal"
              android:textStyle="bold"
              android:textSize="@dimen/title"
              android:text="@string/out_put"/>
            <TextView
              android:id="@+id/path"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/margin_top"
              android:text="@string/path"/>
            <TextView
              android:id="@+id/length"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/margin_top"
              android:text="@string/length"/>
            <TextView
              android:id="@+id/size"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/margin_top"
              android:text="@string/size"/>
            <TextView
              android:id="@+id/resolution"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/margin_top"
              android:text="@string/resolution"/>
          </LinearLayout>
          <LinearLayout
            android:id="@+id/compressLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/margin_top"
              android:layout_gravity="center_horizontal"
              android:textStyle="bold"
              android:textSize="@dimen/title"
              android:text="@string/compress"/>
            <TextView
              android:id="@+id/compressPath"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/margin_top"
              android:text="@string/path"/>
            <TextView
              android:id="@+id/compressLength"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/margin_top"
              android:text="@string/length"/>
            <TextView
              android:id="@+id/compressSize"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/margin_top"
              android:text="@string/size"/>
            <TextView
              android:id="@+id/compressResolution"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/margin_top"
              android:text="@string/resolution"/>
          </LinearLayout>
        </LinearLayout>
      </ScrollView>
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
      android:id="@+id/fab"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom|end"
      android:layout_margin="@dimen/fab_margin"
      android:src="@drawable/ic_video_white"/>
  </android.support.design.widget.CoordinatorLayout>
</layout>